--- a/OPR/function_interpolation/templates/index.html
+++ b/OPR/function_interpolation/templates/index.html
@@ -114,7 +114,9 @@
                             <td>{{y_l}}</td>
 
                         </tr>
+
                         {%endfor%}
+                        <a href="excel" class="btn btn-success">Excel</a>
                         </tbody>
                     </table>
                 </div>
