--- a/OPR/function_interpolation/templates/index.html
+++ b/OPR/function_interpolation/templates/index.html
@@ -82,7 +82,7 @@
 
                         <!-- Add rows button-->
                         <a class="btn btn-primary rounded-0 btn-block" id="insertRow" href="#">Добавить точку</a>
-                        <button class="btn btn-primary rounded-0 btn-block" name="default" id="submit" type="submit">Расчитать</button>
+                        <button class="btn btn-primary rounded-0 btn-block" name="default" id="submit" type="submit">Рассчитать</button>
                         <button class="btn btn-primary rounded-0 btn-block" name="random"  type="submit">Сгенерировать случайно</button>
                     </form>
                 </div>
