--- a/OPR/function_interpolation/templates/index.html
+++ b/OPR/function_interpolation/templates/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <!--    <link rel="stylesheet" type="text/css"-->
+    <!--          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">-->
+    <!--     <script type="text/javascript"-->
+    <!--            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>-->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+
     <link rel="stylesheet" type="text/css"
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href=”http://cdn.pydata.org/bokeh/release/bokeh-2.4.3.min.css" rel=”stylesheet” type=”text/css”>
@@ -34,13 +41,43 @@
 
 </head>
 <body>
+<nav class="navbar bg-light mb-3    ">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">Интерполяция функций</span>
+        <div class="d-flex">
+
+            <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">О приложении
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                 aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            ...
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
 
 <div class="container-fluid ">
     <div class="row">
         {% if not empty%}
         <div class="col-lg-8 ">
             <div class="card rounded-0 border-0 shadow">
-                <div class="card-body p-5">
+                <div class="card-body p-3">
                     <div style="width: 100%">
 
                         {{div | safe}}
@@ -54,79 +91,86 @@
         {%endif%}
         {%if not empty%}
         <div class="col-lg-3 ">
-            {% else %} <div class="col-lg-6 " style="margin-left: auto;
-    margin-right: auto;">{% endif%}
-            <div class="card rounded-0 border-0 shadow">
-                <div class="card-body p-5">
+            {% else %}
+            <div class="col-lg-6 " style="margin-left: auto; margin-right: auto;">{% endif%}
+                <div class="card rounded-0 border-0 shadow">
+                    <div class="card-body p-5">
 
-                    <!--  Bootstrap table-->
-                    <form action="" method="post">
-                        {%csrf_token%}
-                        <div class="table-responsive">
+                        <!--  Bootstrap table-->
+                        <form action="" method="post">
+                            {%csrf_token%}
+                            <div class="table-responsive">
 
-                            <table class="table" name="input_val">
-                                <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">X</th>
-                                    <th scope="col">Y</th>
+                                <table class="table" name="input_val">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">X</th>
+                                        <th scope="col">Y</th>
 
-                                    <th scope="col"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
+                                        <th scope="col"></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
 
-                                </tbody>
-                            </table>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <!-- Add rows button-->
+                            <a class="btn btn-primary rounded-0  mb-1" id="insertRow" href="#" style="width: 100%">Добавить точку</a>
+                            <button class="btn btn-primary rounded-0  mb-1" name="default" id="submit"
+                                    type="submit" style="width: 100%">Рассчитать
+                            </button>
+                            <button class="btn btn-primary rounded-0 mb-1" name="random" type="submit" style="width: 100%">
+                                Сгенерировать случайно
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% if not empty%}
+        <div class="row" style="margin-top: 15px">
+            <div class="col-lg-8 ">
+                <div class="card rounded-0 border-0 shadow mb-3">
+                    <div class="card-body p-3">
+                        <div style="height: 400px;overflow: auto">
+                            <table class="table table-hover table-bordered table-sm table-responsive overflow-auto" >
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">x</th>
+                                <th scope="col">y (Кубический сплайн)</th>
+                                <th scope="col">y (Полиномиальная интерполяция)</th>
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for x,y_cs,y_l in xy%}
+
+                            <tr>
+                                <th scope="row">{{ forloop.counter }}</th>
+                                <td>{{x}}</td>
+                                <td>{{y_cs}}</td>
+                                <td>{{y_l}}</td>
+
+                            </tr>
+
+                            {%endfor%}
+                            <a href="excel" class="btn btn-success">Excel</a>
+                            </tbody>
+                        </table>
                         </div>
 
-                        <!-- Add rows button-->
-                        <a class="btn btn-primary rounded-0 btn-block" id="insertRow" href="#">Добавить точку</a>
-                        <button class="btn btn-primary rounded-0 btn-block" name="default" id="submit" type="submit">Рассчитать</button>
-                        <button class="btn btn-primary rounded-0 btn-block" name="random"  type="submit">Сгенерировать случайно</button>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
+        {%endif%}
     </div>
-     {% if not  empty%}
-    <div class="row" style="margin-top: 15px">
-        <div class="col-lg-8 ">
-            <div class="card rounded-0 border-0 shadow">
-                <div class="card-body p-5">
-                    <table class="table table-hover table-bordered table-sm table-responsive">
-                        <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">x</th>
-                            <th scope="col">y (Кубический сплайн)</th>
-                            <th scope="col">y (Полиномиальная интерполяция)</th>
 
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for x,y_cs,y_l in xy%}
-
-                        <tr>
-                            <th scope="row">{{ forloop.counter }}</th>
-                            <td>{{x}}</td>
-                            <td>{{y_cs}}</td>
-                            <td>{{y_l}}</td>
-
-                        </tr>
-
-                        {%endfor%}
-                        <a href="excel" class="btn btn-success">Excel</a>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    {%endif%}
 </div>
-
-
 </body>
 <script>
     $(function () {
